# customer-profile-platform

./: .gitignore  ARCHITECTURE.md  EFFORT_LOG.md  README.md  REQUIREMENT.md  SOLUTION_BRIEF.md  docker-compose.yaml
.serena/: project.yml
backend/: .dockerignore  .env.example  .gitignore  CODING_STANDARDS.md  Dockerfile  IMPLEMENTATION_PLAN.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_01_01_0000_initial_schema.py  2025_01_02_0000_add_role_is_system_and_rbac_permissions.py  2025_01_03_0000_add_planned_indexes.py
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  client.py  orchestrator.py  prompts.py  rbac.py  retriever.py  tools.py
backend/app/api/: __init__.py  dependencies.py  middleware.py  service_factories.py
backend/app/api/routes/: auth.py  chat.py  customers.py  events.py  health.py  ingestion.py  metrics.py  roles.py  sources.py
backend/app/api/schemas/: auth.py  chat.py  common.py  customer.py  event.py  ingestion.py  metric.py  role.py  source.py
backend/app/application/dtos/: auth.py  chat.py  customer.py  metric.py  role.py  source.py
backend/app/application/jobs/: days_since_contact.py  health_score.py  metric_recompute.py
backend/app/application/services/: auth.py  chat.py  customer.py  event.py  ingestion.py  metric.py  role.py  source.py  user.py
backend/app/core/: context.py  events.py  exceptions.py  protocols.py  types.py
backend/app/infrastructure/: broker.py  cache.py  database.py  event_bus.py  logging.py  security.py
backend/app/infrastructure/models/: __init__.py  base.py  chat.py  customer.py  event.py  metric.py  role.py  source.py  user.py
backend/app/infrastructure/repositories/: base.py  chat.py  customer.py  event.py  metric.py  role.py  source.py  user.py
backend/scheduler/: __main__.py  runner.py
backend/seeds/: __main__.py  seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_customers.py  test_events.py  test_health.py  test_ingestion.py  test_metrics.py  test_sources.py
backend/tests/unit/: test_exceptions.py  test_rbac.py  test_schemas.py  test_security.py  test_types.py
backend/tests/workers/: test_data_store.py  test_resolve.py
backend/workers/: __main__.py  _resolve.py  alerts.py  data_store.py  entrypoint.py  metrics.py
contracts/v1/: REVIEW_REPORT.md  _glossary.yaml  _index.yaml
contracts/v1/api/: auth.yaml  chat.yaml  customers.yaml  events.yaml  health.yaml  ingestion.yaml  metrics.yaml  roles.yaml  sources.yaml
contracts/v1/behavior/: agent-rules.yaml  permission-enforcement.yaml
contracts/v1/domain/: context-map.yaml
contracts/v1/models/: common.yaml  customer.yaml  event.yaml  metric.yaml  role.yaml  session.yaml  source.yaml  user.yaml
contracts/v1/rbac/: permissions.yaml  roles.yaml  tool-permission-map.yaml
frontend/: CODING_STANDARDS.md  DESIGN_SYSTEM.md  IMPLEMENTATION_PLAN.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: app.tsx  main.tsx
scripts/: simulate_events.py
(+115 files in other folders)
