[project]
name = "customer360-backend"
version = "0.1.0"
description = "Customer 360 Insights Agent - Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "structlog>=24.4.0",
    "aio-pika>=9.5.0",
    "redis[hiredis]>=5.2.0",
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

# ---------- Ruff (linter + formatter) ----------
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app", "workers", "scheduler", "seeds", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking (move imports behind TYPE_CHECKING)
    "RUF",    # ruff-specific rules
    "T20",    # flake8-print (catch stray prints)
    "PIE",    # misc lints
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (enforce timezone-aware datetimes)
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default arg — needed for FastAPI Depends()
    "RUF012", # mutable class attrs — false positives on SQLAlchemy models
    "UP046",  # Generic[T] subclass style — keep for readability with SQLAlchemy/Pydantic
]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = ["UP007", "UP035", "I001"]                          # auto-generated migrations
"app/infrastructure/models/**" = ["F821"]                          # SQLAlchemy string-based relationship refs
"seeds/**" = ["T201"]                                              # CLI script — print is intentional
"workers/__main__.py" = ["T201"]                                   # CLI entrypoint
"workers/entrypoint.py" = ["T201"]                                 # worker startup logging
"tests/**" = ["F401", "F811", "DTZ001"]                            # fixtures, re-imports, naive datetimes in tests

[tool.ruff.lint.isort]
known-first-party = ["app", "workers", "scheduler", "seeds"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

# ---------- Coverage ----------
[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 40
